# crosslink-windows

./: .gitignore  .mcp.json  ADR.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN-CONTAINER-AGENTS.md  DESIGN-CROSSLINK-DASHBOARD.md  DESIGN-CROSSLINK-OPS.md  DESIGN-EVENT-SOURCED-COORDINATION.md  DESIGN-SWARM-INTROSPECTION.md  ELI5.md  LICENSE  POLICY-REVIEW.md  README.md  REVIEW-DESIGN-DOC-KICKOFF.md  justfile  test-intervention.sh  test-plan.sh
crosslink/: CHANGELOG.md  Cargo.toml  Cross.toml  build.rs  tarpaulin-report.json  test_cast
crosslink/.cargo/: mutants.toml
crosslink/.chainlink/rules/: global.md
crosslink/.crosslink/: issues.db
crosslink/fuzz/: Cargo.toml
crosslink/fuzz/fuzz_targets/: fuzz_cli_output.rs  fuzz_comments.rs  fuzz_create_issue.rs  fuzz_dependency_graph.rs  fuzz_import.rs  fuzz_labels.rs  fuzz_milestones.rs  fuzz_relations.rs  fuzz_search.rs  fuzz_state_machine.rs  fuzz_subissues.rs  fuzz_update_operations.rs
crosslink/proptest-regressions/commands/: comment.txt
crosslink/proptest-regressions/db/: tests.txt
crosslink/resources/: mcp.json
crosslink/resources/claude/: settings.json
crosslink/resources/claude/commands/: audit.md  check.md  commit.md  crosslink-guide.md  design.md  dev-release.md  featree.md  feature.md  kickoff.md  maintain.md  preflight.md  qa.md  review.md  workflow.md
crosslink/resources/claude/hooks/: crosslink_config.py  heartbeat.py  post-edit-check.py  pre-web-check.py  prompt-guard.py  session-start.py  work-check.py
crosslink/resources/claude/mcp/: knowledge-server.py  safe-fetch-server.py
crosslink/resources/container/: Dockerfile  entrypoint.sh
crosslink/resources/crosslink/: hook-config.json
crosslink/resources/crosslink/rules/: global.md  tracking-normal.md  tracking-strict.md
crosslink/src/: agent_flags.rs  agent_requests.rs  checkpoint.rs  clock_skew.rs  compaction.rs  daemon.rs  db.rs  events.rs  external.rs  findings.rs  hub_source.rs  hub_v3.rs  hub_v3_operation_tests.rs  hydration.rs  identity.rs  issue_file.rs  issue_filing.rs  knowledge.rs  lib.rs  lock_check.rs  locks.rs  main.rs  models.rs  pipeline.rs  seam.rs  shared_writer.rs  signing.rs  sync.rs  token_usage.rs  trust_model.rs  utils.rs
crosslink/src/commands/: agent.rs  archive.rs  comment.rs  compact.rs  config.rs  config_registry.rs  container.rs  context.rs  cpitd.rs  create.rs  delete.rs  deps.rs  design_cmd.rs  design_doc.rs  export.rs  external_issues.rs  external_knowledge.rs  hub_v3_operation_tests.rs  import.rs  init.rs  integrity_cmd.rs  integrity_drift.rs  intervene.rs  kickoff.rs  knowledge.rs  label.rs  lifecycle.rs  locks_cmd.rs  migrate.rs  migrate_hub_v3.rs  milestone.rs  mission_control.rs  mod.rs  next.rs  prune.rs  relate.rs  review.rs  search.rs  session.rs  show.rs  (+10 more)
crosslink/src/commands/init/: manifest.rs  merge.rs  mod.rs  python.rs  signing.rs  walkthrough.rs
crosslink/src/commands/kickoff/: cleanup.rs  graph.rs  helpers.rs  launch.rs  mod.rs  monitor.rs  pipeline.rs  plan.rs  run.rs  (+4 more)
crosslink/src/dashboard/: actions.rs  alerts.rs  alerts_db.rs  api.rs  db.rs  discover.rs  export.rs  github.rs  github_api.rs  mod.rs  poll.rs  projects.rs  pty.rs  pty_api.rs  reader.rs  webhook.rs  webhook_api.rs
crosslink/src/db/: comments.rs  core.rs  helpers.rs  hydration.rs  issues.rs  labels.rs  milestones.rs  mod.rs  relations.rs  sentinel.rs  sessions.rs  snapshot.rs  tests.rs  time_entries.rs  token_usage.rs
crosslink/src/knowledge/: core.rs  edit.rs  mod.rs  pages.rs  search.rs  sync.rs  tests.rs
crosslink/src/orchestrator/: dag.rs  decompose.rs  executor.rs  models.rs
crosslink/src/server/: embedded.rs  errors.rs  mod.rs  routes.rs  state.rs  types.rs  watcher.rs  ws.rs
crosslink/src/shared_writer/: core.rs  locks.rs  milestones.rs  mod.rs  mutations.rs  offline.rs  tests.rs
crosslink/src/sync/: bootstrap.rs  cache.rs  core.rs  heartbeats.rs  locks.rs  migration.rs  mod.rs  tests.rs  trust.rs
crosslink/src/tui/: agents_tab.rs  config_tab.rs  issues_tab.rs  knowledge_tab.rs  milestones_tab.rs  mod.rs  tabs.rs
crosslink/test-fixtures/: phase3-report.json
crosslink/tests/: ac10_deleted_machinery.rs  cli_integration.rs  smoke.rs
crosslink/tests/smoke/: adversarial.rs  cli_data.rs  cli_infra.rs  cli_tooling.rs  concurrency.rs  coordination.rs  harness.rs  lifecycle.rs  server_api.rs  tui_proptest.rs
(+263 files in other folders)
