[package]
name = "crosslink"
version = "0.1.2-alpha.1"
edition = "2021"
rust-version = "1.87"
authors = ["Maxine Levesque <at://maxine.science>", "Doll <at://dollspace.gay>", "Forecast Analytical <analytical@forecacst.bio>"]
description = "A synced issue tracker CLI for multi-AI development"
documentation = "https://docs.rs/crosslink"
license = "MIT"
repository = "https://github.com/forecast-bio/crosslink"
homepage = "https://github.com/forecast-bio/crosslink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "build.rs",
    "LICENSE",
]

[lib]
name = "crosslink"
path = "src/lib.rs"

[[bin]]
name = "crosslink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dialoguer = "0.11"
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
