[package]
name = "crosslink"
version = "0.4.0"
edition = "2021"
rust-version = "1.87"
authors = ["dollspace-gay", "Maxine Levesque <hello@maxine.science>", "Forecast Analytical <analytical@forecast.bio>"]
description = "A synced issue tracker CLI for multi-agent AI development"
documentation = "https://docs.rs/crosslink"
license = "MIT"
repository = "https://github.com/forecast-bio/crosslink"
homepage = "https://forecast.bio/crosslink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "!**/__pycache__/**",
    "build.rs",
    "LICENSE",
]

[lib]
name = "crosslink"
path = "src/lib.rs"

[[bin]]
name = "crosslink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
signal-hook = "0.3"
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
