[package]
name = "crosslink"
version = "0.5.2"
edition = "2021"
rust-version = "1.87"
authors = ["dollspace-gay", "Maxine Levesque <hello@maxine.science>", "Forecast Analytical <analytical@forecast.bio>"]
description = "A synced issue tracker CLI for multi-agent AI development"
documentation = "https://docs.rs/crosslink"
license = "MIT"
repository = "https://github.com/forecast-bio/crosslink"
homepage = "https://forecast.bio/crosslink"
readme = "../README.md"
keywords = ["issue-tracker", "cli", "ai-development", "session-management", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "resources/**/*",
    "!**/__pycache__/**",
    "build.rs",
    "LICENSE",
]

[lib]
name = "crosslink"
path = "src/lib.rs"

[[bin]]
name = "crosslink"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
signal-hook = "0.3"
ratatui = "0.30"
crossterm = "0.29"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
notify = "6"
toml = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hmac = "0.12"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3"
proptest = "1"
arbitrary = "1"
tower = { version = "0.5", features = ["util"] }
